# okey_ai

./: .cta.json  QWEN.md  biome.json  components.json  index.html  package-lock.json  package.json  pnpm-lock.yaml
.zed/: debug.json
src/: index.css  main.tsx  routeTree.gen.ts  styles.css  styles_my.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: events.rs  lib.rs  my_command.rs  my_config.rs  my_events.rs  my_logging.rs  my_modifier_keys.rs  my_rdev.rs  my_reqwest.rs  my_shortcut.rs  my_state.rs  my_test.rs  my_tray.rs  my_utils.rs  my_windows.rs  types.rs
src-tauri/src/my_api/: README.md  commands.rs  example.rs  m_deepseek.rs  m_openai.rs  m_qwen.rs  manager.rs  mod.rs  traits.rs
src-tauri/src/states/: chat_histories.rs  chat_history.rs  mod.rs  setting_states.rs
src-tauri/src/unused/: device_query.rs
src-tauri/src/utils/: calculate_text_width.rs  chat_message.rs  input_handling.rs  language_detection.rs  mod.rs  selecte_text.rs  test_serialization.rs  text_cleaner.rs  text_processing.rs  text_translation.rs  translation_manager.rs  translation_session.rs
src/@types/: i18next.d.ts  index.d.ts
src/components/: AudioRecording.tsx  AutoSpeakVolume.tsx  Copyed.tsx  DIVButton.tsx  Header.tsx  Histories.tsx  HotKey.tsx  component-example.tsx  theme-provider.tsx
src/components/icons/: hugeicons.tsx  index.tsx  (+1 more)
src/i18n/: index.d.ts  index.ts
src/lib/: env.ts  events.ts  types.ts  utils.ts
src/routes/: __root.tsx  about.tsx  index.tsx
src/store/: index.ts
(+15 files in other folders)
