[package]
name = "okey_ai"
version = "0.1.0"
description = "one key to AI"
authors = ["xyf"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0.147"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-http = "2"
selection = "1.2.0"
tauri-plugin-os = "2"
mouse_position = "0.1.4"
tauri-plugin-store = "2"
tauri-plugin-notification = "2"
device_query = "4.0.1"
uuid = {version = "1.19.0", features = ["v4"] } 
rdev = { git = "https://github.com/rustdesk/rdev" }
futures = "0.3"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-single-instance = "2"
